# c_plus_plus_studies

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md  configure.sh
build_cmake_files/: JmfBuildType.cmake  JmfCommon.cmake  JmfMacroCommons.cmake  JmfMacroExecutable.cmake  JmfMacroLibModule.cmake  JmfResources.cmake  Linux.cmake  Toolchain-x86_64-linux-gnu.cmake
dev/: CMakeLists.txt
dev/apps/: CMakeLists.txt
dev/apps/bitcoin/src/: main.cpp
dev/apps/gdb-py/: CMakeLists.txt
dev/apps/gdb-py/resources/: custom_gdb_extensions.py  run_gdbpy.sh  test.gdb
dev/apps/gdb-py/src/: CMakeLists.txt  UuidListNode.cpp  UuidListNode.h  main.cpp
dev/apps/hello-world/src/: CMakeLists.txt  Foo.h  main.cpp
dev/tests/: CMakeLists.txt
dev/tests/apps/: CMakeLists.txt
dev/tests/apps/hello-world/: CMakeLists.txt
dev/tests/apps/hello-world/src/: Foo_test.cpp  main.cpp
dev/tests/examples/: CMakeLists.txt
dev/tests/examples/rvalues/: CMakeLists.txt
dev/tests/examples/rvalues/mocks/: IntVecMock.h
dev/tests/examples/rvalues/src/: CtorCounter.h  CtorCounter_Test.cpp  Foo.cpp  Foo.h  IntVec.cpp  IntVec.h  IntVec_Test.cpp  RvalueRef.cpp  StdMoveAndForward.cpp  UniversalRef_Test.cpp
dev/tests/examples/rvalues/src/item25/: Rvo_Test.cpp
dev/tests/examples/stl/: CMakeLists.txt
dev/tests/examples/stl_course/: CMakeLists.txt
dev/tests/examples/stl_course/multimap/: CMakeLists.txt
dev/tests/examples/templates/src/: EnableIf_Test.cpp  main.cpp  (+4 more)
scripts/: alias.sh  color.sh  configure_bash.sh
scripts/targets/: fujioka-x86_64-linux-gnu.sh
(+9 files in other folders)
